; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_get_clnt_odstate.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_get_clnt_odstate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_clnt_odstate = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfs4_clnt_odstate*)* @get_clnt_odstate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_clnt_odstate(%struct.nfs4_clnt_odstate* %0) #0 {
  %2 = alloca %struct.nfs4_clnt_odstate*, align 8
  store %struct.nfs4_clnt_odstate* %0, %struct.nfs4_clnt_odstate** %2, align 8
  %3 = load %struct.nfs4_clnt_odstate*, %struct.nfs4_clnt_odstate** %2, align 8
  %4 = icmp ne %struct.nfs4_clnt_odstate* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.nfs4_clnt_odstate*, %struct.nfs4_clnt_odstate** %2, align 8
  %7 = getelementptr inbounds %struct.nfs4_clnt_odstate, %struct.nfs4_clnt_odstate* %6, i32 0, i32 0
  %8 = call i32 @refcount_inc(i32* %7)
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @refcount_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
